--- a/examples/strapi-sqlite/docker-compose.yml
+++ b/examples/strapi-sqlite/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   strapi:
-    image: naskio/strapi
+    image: vshadbolt/strapi
     ports:
       - '1337:1337'
     # volumes:
