--- a/examples/strapi-postgres/docker-compose.yml
+++ b/examples/strapi-postgres/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   strapi-v4:
-    image: naskio/strapi
+    image: vshadbolt/strapi
     restart: always
     container_name: strapi-v4
     ports:
