--- a/images/strapi-debian/Dockerfile
+++ b/images/strapi-debian/Dockerfile
@@ -8,8 +8,7 @@ FROM base-debian
 
 ARG STRAPI_VERSION=latest
 
-RUN yarn global add @strapi/strapi@${STRAPI_VERSION}
-
+RUN yarn config set network-timeout 600000 -g && yarn global add @strapi/strapi@${STRAPI_VERSION}
 
 RUN mkdir -p /srv/app && chown 1000:1000 -R /srv/app
 
