--- a/.github/workflows/auto-check-new-releases.yml
+++ b/.github/workflows/auto-check-new-releases.yml
@@ -15,7 +15,7 @@ jobs:
   get-version:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
         with:
           token: ${{ secrets.PAT }}
 
@@ -23,8 +23,8 @@ jobs:
         id: fetch-version
         run: |
           curl -sL https://raw.githubusercontent.com/strapi/strapi/main/packages/core/strapi/package.json | jq -r ".version" > release-versions/strapi-latest.txt
-          echo ::set-output name=version::$(cat release-versions/strapi-latest.txt)
+          echo "version=$(cat release-versions/strapi-latest.txt)" >> "$GITHUB_OUTPUT"
 
-      - uses: stefanzweifel/git-auto-commit-action@v4
+      - uses: stefanzweifel/git-auto-commit-action@v5
         with:
           commit_message: New auto release v${{steps.fetch-version.outputs.version}}
