--- a/.github/workflows/publish-docker-images.yml
+++ b/.github/workflows/publish-docker-images.yml
@@ -18,26 +18,26 @@ jobs:
     steps:
 
       - name: Get current repository
-        uses: actions/checkout@v1
+        uses: actions/checkout@v4
 
       - name: Get the version
         id: vars
-        run: echo ::set-output name=tag::$(cat release-versions/strapi-latest.txt)
+        run: echo "tag=$(cat release-versions/strapi-latest.txt)" >> "$GITHUB_OUTPUT"
 
       - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
+        uses: docker/setup-qemu-action@v3
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+        uses: docker/setup-buildx-action@v3
 
       - name: Login to DockerHub
-        uses: docker/login-action@v1
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build (default => debian)
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v5
         with:
           context: ./images/strapi-debian
           build-args: |
@@ -51,7 +51,7 @@ jobs:
             ${{ secrets.DOCKER_USERNAME }}/strapi:latest
 
       - name: Build (alpine)
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v5
         with:
           context: ./images/strapi-alpine
           build-args: |
@@ -65,7 +65,7 @@ jobs:
             ${{ secrets.DOCKER_USERNAME }}/strapi:latest-alpine
       
       - name: Build (default => debian arm64)
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v5
         with:
           context: ./images/strapi-debian
           build-args: |
@@ -79,7 +79,7 @@ jobs:
             ${{ secrets.DOCKER_USERNAME }}/strapi:latest-arm64
 
       - name: Build (alpine arm64)
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v5
         with:
           context: ./images/strapi-alpine
           build-args: |
@@ -93,7 +93,7 @@ jobs:
             ${{ secrets.DOCKER_USERNAME }}/strapi:latest-alpine-arm64
 
       - name: Docker Hub Description (README.md)
-        uses: peter-evans/dockerhub-description@v2
+        uses: peter-evans/dockerhub-description@v4
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
